# chessformer

./: .gitattributes  .gitignore  README.md  attention.py  benchmark.py  chess_loader.py  chess_moves_to_input_data.py  chessformer.py  compass_artifact_wf-2d775750-ad6c-4ca4-b113-d8c5c184cc59_text_markdown.md  compass_artifact_wf-5c98f3cd-714d-4b35-b1e0-b87f53d48903_text_markdown.md  data_generation.md  diffusion_model.py  generate_selfplay_data.py  grok_tracker.py  inference_test.py  mcts.py  model_utils.py  noise_schedule.py  openings.py  pgn_to_training_data.py  play_against.py  play_gui.py  policy.py  pyproject.toml  requirements.txt  selfplay_loop.py  stockfish-ubuntu-x86-64-avx2.tar  train_model.py  trajectory_loader.py  transformer.py
models/: 2000_elo_pos_engine.pth  2000_elo_pos_engine_best_test_whole.pth  2500_elo_pos_engine_v2.pth
tests/: test_attention.py  test_benchmark.py  test_chessformer_v2.py  test_diffusion_model.py  test_grok_tracker.py  test_mcts.py  test_model_utils.py  test_noise_schedule.py  test_selfplay_loop.py  test_trajectory_loader.py
